@@ -503,6 +503,11 @@ EOT
 			}
 			$wgOut->setRobotPolicy( 'noindex,nofollow' );
 			$wgOut->wrapWikiMsg( "<div id='mw-imagepage-nofile' class='plainlinks'>\n$1\n</div>", $nofile );
+			if ( !$this->getID() ) {
+				// If there is no image, no shared image, and no description page,
+				// output a 404, to be consistent with articles.
+				$wgRequest->response()->header( "HTTP/1.1 404 Not Found" );
+			}
 		}
 	}
 
