@@ -518,6 +518,10 @@ files are used instead.
 * (bug 28034) uploading file to local wiki when file exists on shared repository
   (commons) gives spurious info in the warning message
 * Usernames get lost when selecting different sorts on Special:listfiles
+* (bug 28166) UploadBase assumes that 'edit' and 'upload' rights are not per
+  page restrictions
+* (bug 28242) Make redirects generated by urls containing a local interwiki
+  prefix be a 301 instead of a 302.
 
 * BREAKING CHANGE: action=patrol now requires POST
 * BREAKING CHANGE: patrol token is no longer the same as edit token
@@ -632,6 +636,8 @@ files are used instead.
   file is a multi-page file
 * (bug 10268) Added linktodiffs parameter on action=feedwatchlist
 * (bug 26219) Show API limits for multi values in description
+* (bug 28070) Fix watchlist RSS for databases that store timestamps in a 
+  real timestamp field.
 
 === Languages updated in 1.17 ===
 
